# whisper.cpp

./: CMakeLists.txt
.github/workflows/: build-release.yml
examples/cli/: CMakeLists.txt  cli.cpp  crash_handler.cpp  crash_handler.h  stacktrace.cpp  stacktrace.h
examples/vad-speech-segments/: speech.cpp
src/: whisper.cpp
